Fix: Add API key support for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- API Key for Production -->
+    <script>
+      window.ENV = {
+        VITE_GEMINI_API_KEY: 'AIzaSyDCKZ7XcYHJgNhPjKTXOImVB59iDPPwzqQ'
+      };
+    </script>
   </head>
   <body class="bg-dark">
     <div id="root"></div>
